# kali-gpt

./: .env.example  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  README.md  kali-gpt-autonomous.py  kali-gpt-enhanced.py  kali-gpt.py  multi_agent.py  requirements.txt  setup.sh
fine_tune/: FINE_TUNING_GUIDE.md
kali-gpt-v3/: README.md  main.py  push_to_github.sh  pyproject.toml  requirements.txt  setup.sh
kali-gpt-v3/core/: __init__.py  app.py
kali-gpt-v3/reporting/: __init__.py  generator.py
kali-gpt-v3/tools/: __init__.py  executor.py
kali_gpt/: __init__.py  api_server.py
kali_gpt/core/: __init__.py
kali_gpt/integrations/: scanner.py
kali_gpt/modules/: ai_service.py
kali_gpt/plugins/: plugin_manager.py
kali_gpt/ui/: menu.py
